# math-physualizer

./: CMakeLists.txt  README.md
documentation/: notes.md
include/: AimingSystem.h  AimingSystemScene.h  Boid.h  BoidScene.h  DoublePendulum.h  DoublePendulumScene.h  MenuScene.h  Pendulum.h  PendulumScene.h  PhysicsObject.h  Scene.h  SceneManager.h  Spaceship.h  SpaceshipScene.h
libs/raylib/src/: raylib.h
src/: AimingSystem.cpp  AimingSystemScene.cpp  Boid.cpp  BoidScene.cpp  DoublePendulum.cpp  DoublePendulumScene.cpp  MenuScene.cpp  Pendulum.cpp  PendulumScene.cpp  PhysicsObject.cpp  SceneManager.cpp  Spaceship.cpp  SpaceshipScene.cpp  main.cpp
